# PaddleOCR-json

./: .gitignore  LICENSE  OCR.js  PaddleOCR-demo-powershell.ps1  PaddleOCR-demo.py  README-v1.2.md  README.md  app.js  package-lock.json  package.json
PaddleOCR-json/: PaddleOCR_json_config.txt
Resolve/: readme.md
api/CSharp/: CSharp.csproj  CSharp.sln  Demo.cs  Ocr.cs  OcrRequest.cs  OcrResponse.cs  PPOCR_api.cs
api/PowerShell/: PPOCR_api.ps1  demo.ps1
api/java/: Demo.java  Ocr.java  README.md
api/node.js/: OCR.d.ts  OCR.js  OCR.min.js  README.md  app.js  package-lock.json  package.json  tsconfig.es5.json  tsconfig.json
api/node.js/es5/: index.d.ts  index.js  worker.d.ts  worker.js
api/node.js/es6/: index.d.ts  index.js  worker.d.ts
api/node.js/esnext/: index.d.ts  index.js  worker.d.ts  worker.js
api/node.js/test/: .gitignore  app.js  package-lock.json  package.json
api/node.js/ts/: index.ts  worker.ts
api/powershell/: PPOCR_api.ps1  README.md  demo.ps1
api/python/: .gitignore  PPOCR_api.py  PPOCR_visualize.py  README.md  demo.py  demo1.py  demo2.py  demo3.py
api/python/tbpu/: __init__.py  merge_line_h.py  merge_line_h_m_fuzzy.py  merge_line_h_m_left.py  merge_line_h_m_paragraph.py  merge_line_v_lr.py  merge_line_v_rl.py  merge_para.py  merge_para_code.py  tbpu.py
api/rust/: README.md
backups_previous_version/: README.md
backups_previous_version/PaddleOCR-json_v1.1.1/: PaddleOCR-demo.py  README.md
backups_previous_version/PaddleOCR-json_v1.1.1/cpp_infer/src/: ocr_rec.cpp
cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README-docker.md  README-linux.md  README.md
cpp/.source/: .gitignore
cpp/cmake/: opencv-install-utils.cmake
cpp/docs/: 移植指南.md
cpp/include/: args.h  base64.h  dirent.h  ocr_cls.h  ocr_det.h  ocr_rec.h  paddleocr.h  paddlestructure.h  task.h  utility.h
cpp/src/: args.cpp  base64.cpp  main.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  paddleocr.cpp  paddlestructure.cpp  structure_layout.cpp  structure_table.cpp  task.cpp  task_linux.cpp  task_win32.cpp  utility.cpp
cpp/tools/: linux_build.sh  linux_build_opencv.sh  linux_run.sh
cpp/tools/linux_dist_tools/: README.txt  install_env.sh  run.sh
cpp_infer/include/: ocr_rec.h
cpp_infer/include/configor/: configor.hpp  configor_basic.hpp  configor_conversion.hpp  configor_declare.hpp  configor_encoding.hpp  configor_exception.hpp  configor_parser.hpp  configor_serializer.hpp  configor_stream.hpp  configor_token.hpp  configor_value.hpp  json.hpp
cpp_infer/src/: main.cpp  ocr_det.cpp  ocr_rec.cpp
demo/: PaddleOCR-demo-powershell.ps1
docs/: update-v1.3.md  构建指南.md  移植指南.md  详细使用指南.md  项目构建指南.md
project_files/: README.md
project_files/cpp_infer/: .gitignore  CMakeLists.txt  README.md
project_files/cpp_infer/include/: args.h  load_config.h  ocr_cls.h  ocr_det.h  ocr_rec.h  paddleocr.h  tools.h  tools_flags.h  utility.h
project_files/cpp_infer/include/configor/: configor_conversion.hpp  configor_iterator.hpp  configor_value.hpp  json.hpp
project_files/cpp_infer/src/: CMakeLists.txt  args.cpp  load_config.cpp  main.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  paddleocr.cpp  paddlestructure.cpp  structure_table.cpp  tools.cpp  utility.cpp
